Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/TryWithResources/TwrForVariable1.out
TwrForVariable1.java:13:15: compiler.err.feature.not.supported.in.source.plural: (compiler.misc.feature.var.in.try.with.resources), 8, 9
1 error
